tests/snapshots/run_wpt_conformance__onnx_slice_float32_4D_tensor_with_strides.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "slice.https.any.js",
    "slice float32 4D tensor with strides",
    "onnx",
    "PASS",
)
